test: 플레이어 공백 입력 테스트 추가 - runException 문제점
runException() 은 내부 로직에서 공백을 처리하지 못한다.
그래서 안에
if (args.length == 0 || args[0].isEmpty()) {
    throw new IllegalArgumentException("Argument must not be empty.");
} 를 추가해줘야 할 거 같다.